myproject/force-app/main/default/objects/Contact/fields/ArtoTestField__c.field-meta.xml
<CustomField>
    <fullName>ArtoTestField__c</fullName>
    <label>ArtoTestField</label>
    <length>35</length>
    <type>Text</type>
</CustomField>