myproject/force-app/main/default/objects/Contact/fields/Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Date__c</fullName>
    <label>Demo Date</label>
    <type>Date</type>
</CustomField>