myproject/force-app/main/default/objects/Contact/fields/Harshad_1__c.field-meta.xml
<CustomField>
    <fullName>Harshad_1__c</fullName>
    <label>Harshad-1</label>
    <length>45</length>
    <type>Text</type>
</CustomField>