myproject/force-app/main/default/objects/Contact/fields/Here__c.field-meta.xml
<CustomField>
    <fullName>Here__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Here</label>
    <type>Checkbox</type>
</CustomField>