myproject/force-app/main/default/objects/Contact/fields/OrgBased__c.field-meta.xml
<CustomField>
    <fullName>OrgBased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OrgBased</label>
    <type>Checkbox</type>
</CustomField>