myproject/force-app/main/default/objects/Contact/fields/SamirField__c.field-meta.xml
<CustomField>
    <fullName>SamirField__c</fullName>
    <label>SamirField</label>
    <length>20</length>
    <type>Text</type>
</CustomField>