myproject/force-app/main/default/objects/Contact/fields/TestFieldDemo__c.field-meta.xml
<CustomField>
    <fullName>TestFieldDemo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestFieldDemo</label>
    <type>Checkbox</type>
</CustomField>