myproject/force-app/main/default/objects/Contact/fields/testtwo__c.field-meta.xml
<CustomField>
    <fullName>testtwo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>testtwo</label>
    <type>Checkbox</type>
</CustomField>